edits and before insert many

--- a/s21_list/s21_list.dSYM/Contents/Resources/Relocations/x86_64/s21_list.yml
+++ b/s21_list/s21_list.dSYM/Contents/Resources/Relocations/x86_64/s21_list.yml
@@ -2,60 +2,50 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     '/Users/craitbla/Documents/for_github/s21_containers/s21_list/s21_list'
 relocations:
-  - { offsetInCU: 0xF9, offset: 0xF9, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x100002940, symSize: 0x1B }
-  - { offsetInCU: 0x3231, offset: 0x3231, size: 0x8, addend: 0x0, symName: __ZStL8__ioinit, symObjAddr: 0x22BC0, symBinAddr: 0x10000804F, symSize: 0x0 }
-  - { offsetInCU: 0x4102, offset: 0x4102, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIjEE, symObjAddr: 0xD7B, symBinAddr: 0x10000375A, symSize: 0x0 }
-  - { offsetInCU: 0x411C, offset: 0x411C, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedImEE, symObjAddr: 0xD7C, symBinAddr: 0x10000375B, symSize: 0x0 }
-  - { offsetInCU: 0x4136, offset: 0x4136, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIyEE, symObjAddr: 0xD7D, symBinAddr: 0x10000375C, symSize: 0x0 }
-  - { offsetInCU: 0x4160, offset: 0x4160, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0xD1B, symBinAddr: 0x10000365B, symSize: 0xB }
-  - { offsetInCU: 0x4188, offset: 0x4188, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0xCE2, symBinAddr: 0x100003622, symSize: 0x39 }
-  - { offsetInCU: 0x4190, offset: 0x4190, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0xD1B, symBinAddr: 0x10000365B, symSize: 0xB }
-  - { offsetInCU: 0x417B, offset: 0x417B, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9pop_frontEv, symObjAddr: 0xC02, symBinAddr: 0x100003542, symSize: 0xE0 }
-  - { offsetInCU: 0x4183, offset: 0x4183, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0xCE2, symBinAddr: 0x100003622, symSize: 0x39 }
-  - { offsetInCU: 0x4213, offset: 0x4213, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiED1Ev, symObjAddr: 0xBDE, symBinAddr: 0x10000351E, symSize: 0x24 }
-  - { offsetInCU: 0x4225, offset: 0x4225, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5clearEv, symObjAddr: 0xBAC, symBinAddr: 0x1000034EC, symSize: 0x32 }
-  - { offsetInCU: 0x4254, offset: 0x4254, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0xB8C, symBinAddr: 0x1000034CC, symSize: 0x20 }
-  - { offsetInCU: 0x4283, offset: 0x4283, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0xB6C, symBinAddr: 0x1000034AC, symSize: 0x20 }
-  - { offsetInCU: 0x428B, offset: 0x428B, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0xB8C, symBinAddr: 0x1000034CC, symSize: 0x20 }
-  - { offsetInCU: 0x42B2, offset: 0x42B2, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiE5equalERS3_, symObjAddr: 0xB4A, symBinAddr: 0x10000348A, symSize: 0x22 }
-  - { offsetInCU: 0x42BA, offset: 0x42BA, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0xB6C, symBinAddr: 0x1000034AC, symSize: 0x20 }
-  - { offsetInCU: 0x4339, offset: 0x4339, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ei, symObjAddr: 0xB1A, symBinAddr: 0x10000345A, symSize: 0x30 }
-  - { offsetInCU: 0x43C3, offset: 0x43C3, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1EiPS3_S4_, symObjAddr: 0xAE2, symBinAddr: 0x100003422, symSize: 0x38 }
-  - { offsetInCU: 0x43F2, offset: 0x43F2, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiEaSERNS1_17ListConstIteratorIiEE, symObjAddr: 0xAC2, symBinAddr: 0x100003402, symSize: 0x20 }
-  - { offsetInCU: 0x43FA, offset: 0x43FA, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1EiPS3_S4_, symObjAddr: 0xAE2, symBinAddr: 0x100003422, symSize: 0x38 }
-  - { offsetInCU: 0x4434, offset: 0x4434, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEmmEv, symObjAddr: 0xAA2, symBinAddr: 0x1000033E2, symSize: 0x20 }
-  - { offsetInCU: 0x443C, offset: 0x443C, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiEaSERNS1_17ListConstIteratorIiEE, symObjAddr: 0xAC2, symBinAddr: 0x100003402, symSize: 0x20 }
-  - { offsetInCU: 0x4463, offset: 0x4463, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE10push_frontERKi, symObjAddr: 0x9CC, symBinAddr: 0x10000330C, symSize: 0xD6 }
-  - { offsetInCU: 0x446B, offset: 0x446B, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEmmEv, symObjAddr: 0xAA2, symBinAddr: 0x1000033E2, symSize: 0x20 }
-  - { offsetInCU: 0x44CC, offset: 0x44CC, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEeqES3_, symObjAddr: 0x9A6, symBinAddr: 0x1000032E6, symSize: 0x26 }
-  - { offsetInCU: 0x450F, offset: 0x450F, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9clear_delEv, symObjAddr: 0x94A, symBinAddr: 0x10000328A, symSize: 0x5C }
-  - { offsetInCU: 0x453E, offset: 0x453E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9push_backERKi, symObjAddr: 0x868, symBinAddr: 0x1000031A8, symSize: 0xE2 }
-  - { offsetInCU: 0x45A7, offset: 0x45A7, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE3endEv, symObjAddr: 0x832, symBinAddr: 0x100003172, symSize: 0x36 }
-  - { offsetInCU: 0x45D6, offset: 0x45D6, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x820, symBinAddr: 0x100003160, symSize: 0x12 }
-  - { offsetInCU: 0x4605, offset: 0x4605, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE4sizeEv, symObjAddr: 0x80E, symBinAddr: 0x10000314E, symSize: 0x12 }
-  - { offsetInCU: 0x460D, offset: 0x460D, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x820, symBinAddr: 0x100003160, symSize: 0x12 }
-  - { offsetInCU: 0x4634, offset: 0x4634, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE7defoultEv, symObjAddr: 0x7AC, symBinAddr: 0x1000030EC, symSize: 0x62 }
-  - { offsetInCU: 0x4698, offset: 0x4698, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ev, symObjAddr: 0x788, symBinAddr: 0x1000030C8, symSize: 0x24 }
-  - { offsetInCU: 0x46AA, offset: 0x46AA, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4sizeEv, symObjAddr: 0x776, symBinAddr: 0x1000030B6, symSize: 0x12 }
-  - { offsetInCU: 0x46B2, offset: 0x46B2, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ev, symObjAddr: 0x788, symBinAddr: 0x1000030C8, symSize: 0x24 }
-  - { offsetInCU: 0x46D9, offset: 0x46D9, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x764, symBinAddr: 0x1000030A4, symSize: 0x12 }
-  - { offsetInCU: 0x4708, offset: 0x4708, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x730, symBinAddr: 0x100003070, symSize: 0x34 }
-  - { offsetInCU: 0x4710, offset: 0x4710, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x764, symBinAddr: 0x1000030A4, symSize: 0x12 }
-  - { offsetInCU: 0x4757, offset: 0x4757, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEneES3_, symObjAddr: 0x708, symBinAddr: 0x100003048, symSize: 0x28 }
-  - { offsetInCU: 0x475F, offset: 0x475F, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x730, symBinAddr: 0x100003070, symSize: 0x34 }
-  - { offsetInCU: 0x479A, offset: 0x479A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE3endEv, symObjAddr: 0x6DA, symBinAddr: 0x10000301A, symSize: 0x2E }
-  - { offsetInCU: 0x47DD, offset: 0x47DD, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE6insertENS1_12ListIteratorIiEERKi, symObjAddr: 0x428, symBinAddr: 0x100002D68, symSize: 0x2B2 }
-  - { offsetInCU: 0x4925, offset: 0x4925, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x412, symBinAddr: 0x100002D52, symSize: 0x16 }
-  - { offsetInCU: 0x492D, offset: 0x492D, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE6insertENS1_12ListIteratorIiEERKi, symObjAddr: 0x428, symBinAddr: 0x100002D68, symSize: 0x2B2 }
-  - { offsetInCU: 0x4953, offset: 0x4953, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED2Ev, symObjAddr: 0x3FC, symBinAddr: 0x100002D3C, symSize: 0x16 }
-  - { offsetInCU: 0x495B, offset: 0x495B, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x412, symBinAddr: 0x100002D52, symSize: 0x16 }
-  - { offsetInCU: 0x4957, offset: 0x4957, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5beginEv, symObjAddr: 0x3D0, symBinAddr: 0x100002D10, symSize: 0x2C }
-  - { offsetInCU: 0x495F, offset: 0x495F, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED2Ev, symObjAddr: 0x3FC, symBinAddr: 0x100002D3C, symSize: 0x16 }
-  - { offsetInCU: 0x49D5, offset: 0x49D5, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x3B4, symBinAddr: 0x100002CF4, symSize: 0x1C }
-  - { offsetInCU: 0x4A58, offset: 0x4A58, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiEC1ERKSt16initializer_listIiE, symObjAddr: 0x33E, symBinAddr: 0x100002C7E, symSize: 0x76 }
-  - { offsetInCU: 0x4A60, offset: 0x4A60, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x3B4, symBinAddr: 0x100002CF4, symSize: 0x1C }
-  - { offsetInCU: 0x4AA9, offset: 0x4AA9, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x10000295B, symSize: 0x323 }
-  - { offsetInCU: 0x4AB1, offset: 0x4AB1, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiEC1ERKSt16initializer_listIiE, symObjAddr: 0x33E, symBinAddr: 0x100002C7E, symSize: 0x76 }
-  - { offsetInCU: 0x4B8B, offset: 0x4B8B, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x100002940, symSize: 0x1B }
-  - { offsetInCU: 0x4B93, offset: 0x4B93, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x10000295B, symSize: 0x323 }
+  - { offsetInCU: 0xF9, offset: 0xF9, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x1000030C8, symSize: 0x1B }
+  - { offsetInCU: 0x3231, offset: 0x3231, size: 0x8, addend: 0x0, symName: __ZStL8__ioinit, symObjAddr: 0x21B88, symBinAddr: 0x10000801C, symSize: 0x0 }
+  - { offsetInCU: 0x4121, offset: 0x4121, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIjEE, symObjAddr: 0x76B, symBinAddr: 0x1000038DB, symSize: 0x0 }
+  - { offsetInCU: 0x413B, offset: 0x413B, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedImEE, symObjAddr: 0x76C, symBinAddr: 0x1000038DC, symSize: 0x0 }
+  - { offsetInCU: 0x4155, offset: 0x4155, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIyEE, symObjAddr: 0x76D, symBinAddr: 0x1000038DD, symSize: 0x0 }
+  - { offsetInCU: 0x417F, offset: 0x417F, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0x741, symBinAddr: 0x100003809, symSize: 0xB }
+  - { offsetInCU: 0x41A7, offset: 0x41A7, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0x708, symBinAddr: 0x1000037D0, symSize: 0x39 }
+  - { offsetInCU: 0x41AF, offset: 0x41AF, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0x741, symBinAddr: 0x100003809, symSize: 0xB }
+  - { offsetInCU: 0x419A, offset: 0x419A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9pop_frontEv, symObjAddr: 0x628, symBinAddr: 0x1000036F0, symSize: 0xE0 }
+  - { offsetInCU: 0x41A2, offset: 0x41A2, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0x708, symBinAddr: 0x1000037D0, symSize: 0x39 }
+  - { offsetInCU: 0x4232, offset: 0x4232, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiED1Ev, symObjAddr: 0x604, symBinAddr: 0x1000036CC, symSize: 0x24 }
+  - { offsetInCU: 0x4244, offset: 0x4244, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5clearEv, symObjAddr: 0x5D2, symBinAddr: 0x10000369A, symSize: 0x32 }
+  - { offsetInCU: 0x42DF, offset: 0x42DF, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1EiPS3_S4_, symObjAddr: 0x59A, symBinAddr: 0x100003662, symSize: 0x38 }
+  - { offsetInCU: 0x430E, offset: 0x430E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0x57A, symBinAddr: 0x100003642, symSize: 0x20 }
+  - { offsetInCU: 0x433D, offset: 0x433D, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0x55A, symBinAddr: 0x100003622, symSize: 0x20 }
+  - { offsetInCU: 0x4345, offset: 0x4345, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0x57A, symBinAddr: 0x100003642, symSize: 0x20 }
+  - { offsetInCU: 0x436C, offset: 0x436C, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiE5equalERS3_, symObjAddr: 0x538, symBinAddr: 0x100003600, symSize: 0x22 }
+  - { offsetInCU: 0x4374, offset: 0x4374, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0x55A, symBinAddr: 0x100003622, symSize: 0x20 }
+  - { offsetInCU: 0x43AE, offset: 0x43AE, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9clear_delEv, symObjAddr: 0x4DC, symBinAddr: 0x1000035A4, symSize: 0x5C }
+  - { offsetInCU: 0x43DD, offset: 0x43DD, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9push_backERKi, symObjAddr: 0x3FA, symBinAddr: 0x1000034C2, symSize: 0xE2 }
+  - { offsetInCU: 0x4446, offset: 0x4446, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE3endEv, symObjAddr: 0x3C4, symBinAddr: 0x10000348C, symSize: 0x36 }
+  - { offsetInCU: 0x4475, offset: 0x4475, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x3B2, symBinAddr: 0x10000347A, symSize: 0x12 }
+  - { offsetInCU: 0x44A4, offset: 0x44A4, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE4sizeEv, symObjAddr: 0x3A0, symBinAddr: 0x100003468, symSize: 0x12 }
+  - { offsetInCU: 0x44AC, offset: 0x44AC, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x3B2, symBinAddr: 0x10000347A, symSize: 0x12 }
+  - { offsetInCU: 0x44D3, offset: 0x44D3, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE7defoultEv, symObjAddr: 0x33E, symBinAddr: 0x100003406, symSize: 0x62 }
+  - { offsetInCU: 0x4537, offset: 0x4537, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ev, symObjAddr: 0x31A, symBinAddr: 0x1000033E2, symSize: 0x24 }
+  - { offsetInCU: 0x4549, offset: 0x4549, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x308, symBinAddr: 0x1000033D0, symSize: 0x12 }
+  - { offsetInCU: 0x4578, offset: 0x4578, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x2D4, symBinAddr: 0x10000339C, symSize: 0x34 }
+  - { offsetInCU: 0x4580, offset: 0x4580, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x308, symBinAddr: 0x1000033D0, symSize: 0x12 }
+  - { offsetInCU: 0x45C7, offset: 0x45C7, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEneES3_, symObjAddr: 0x2AC, symBinAddr: 0x100003374, symSize: 0x28 }
+  - { offsetInCU: 0x45CF, offset: 0x45CF, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x2D4, symBinAddr: 0x10000339C, symSize: 0x34 }
+  - { offsetInCU: 0x460A, offset: 0x460A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE3endEv, symObjAddr: 0x27E, symBinAddr: 0x100003346, symSize: 0x2E }
+  - { offsetInCU: 0x469E, offset: 0x469E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x268, symBinAddr: 0x100003330, symSize: 0x16 }
+  - { offsetInCU: 0x46A6, offset: 0x46A6, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE3endEv, symObjAddr: 0x27E, symBinAddr: 0x100003346, symSize: 0x2E }
+  - { offsetInCU: 0x46CC, offset: 0x46CC, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED2Ev, symObjAddr: 0x252, symBinAddr: 0x10000331A, symSize: 0x16 }
+  - { offsetInCU: 0x46D4, offset: 0x46D4, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x268, symBinAddr: 0x100003330, symSize: 0x16 }
+  - { offsetInCU: 0x46D0, offset: 0x46D0, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5beginEv, symObjAddr: 0x226, symBinAddr: 0x1000032EE, symSize: 0x2C }
+  - { offsetInCU: 0x46D8, offset: 0x46D8, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED2Ev, symObjAddr: 0x252, symBinAddr: 0x10000331A, symSize: 0x16 }
+  - { offsetInCU: 0x4713, offset: 0x4713, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE16insert_many_backIJEEEvDpOT_, symObjAddr: 0x21A, symBinAddr: 0x1000032E2, symSize: 0xC }
+  - { offsetInCU: 0x4787, offset: 0x4787, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x1FE, symBinAddr: 0x1000032C6, symSize: 0x1C }
+  - { offsetInCU: 0x480A, offset: 0x480A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiEC1ERKSt16initializer_listIiE, symObjAddr: 0x188, symBinAddr: 0x100003250, symSize: 0x76 }
+  - { offsetInCU: 0x4812, offset: 0x4812, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x1FE, symBinAddr: 0x1000032C6, symSize: 0x1C }
+  - { offsetInCU: 0x485B, offset: 0x485B, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x1000030E3, symSize: 0x16D }
+  - { offsetInCU: 0x4863, offset: 0x4863, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiEC1ERKSt16initializer_listIiE, symObjAddr: 0x188, symBinAddr: 0x100003250, symSize: 0x76 }
+  - { offsetInCU: 0x4901, offset: 0x4901, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x1000030C8, symSize: 0x1B }
+  - { offsetInCU: 0x4909, offset: 0x4909, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x1000030E3, symSize: 0x16D }
 ...
