--- a/s21_list/s21_list.dSYM/Contents/Resources/Relocations/x86_64/s21_list.yml
+++ b/s21_list/s21_list.dSYM/Contents/Resources/Relocations/x86_64/s21_list.yml
@@ -2,50 +2,66 @@
 triple:          'x86_64-apple-darwin'
 binary-path:     '/Users/craitbla/Documents/for_github/s21_containers/s21_list/s21_list'
 relocations:
-  - { offsetInCU: 0xF9, offset: 0xF9, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x1000030C8, symSize: 0x1B }
-  - { offsetInCU: 0x3231, offset: 0x3231, size: 0x8, addend: 0x0, symName: __ZStL8__ioinit, symObjAddr: 0x21B88, symBinAddr: 0x10000801C, symSize: 0x0 }
-  - { offsetInCU: 0x4121, offset: 0x4121, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIjEE, symObjAddr: 0x76B, symBinAddr: 0x1000038DB, symSize: 0x0 }
-  - { offsetInCU: 0x413B, offset: 0x413B, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedImEE, symObjAddr: 0x76C, symBinAddr: 0x1000038DC, symSize: 0x0 }
-  - { offsetInCU: 0x4155, offset: 0x4155, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIyEE, symObjAddr: 0x76D, symBinAddr: 0x1000038DD, symSize: 0x0 }
-  - { offsetInCU: 0x417F, offset: 0x417F, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0x741, symBinAddr: 0x100003809, symSize: 0xB }
-  - { offsetInCU: 0x41A7, offset: 0x41A7, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0x708, symBinAddr: 0x1000037D0, symSize: 0x39 }
-  - { offsetInCU: 0x41AF, offset: 0x41AF, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0x741, symBinAddr: 0x100003809, symSize: 0xB }
-  - { offsetInCU: 0x419A, offset: 0x419A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9pop_frontEv, symObjAddr: 0x628, symBinAddr: 0x1000036F0, symSize: 0xE0 }
-  - { offsetInCU: 0x41A2, offset: 0x41A2, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0x708, symBinAddr: 0x1000037D0, symSize: 0x39 }
-  - { offsetInCU: 0x4232, offset: 0x4232, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiED1Ev, symObjAddr: 0x604, symBinAddr: 0x1000036CC, symSize: 0x24 }
-  - { offsetInCU: 0x4244, offset: 0x4244, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5clearEv, symObjAddr: 0x5D2, symBinAddr: 0x10000369A, symSize: 0x32 }
-  - { offsetInCU: 0x42DF, offset: 0x42DF, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1EiPS3_S4_, symObjAddr: 0x59A, symBinAddr: 0x100003662, symSize: 0x38 }
-  - { offsetInCU: 0x430E, offset: 0x430E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0x57A, symBinAddr: 0x100003642, symSize: 0x20 }
-  - { offsetInCU: 0x433D, offset: 0x433D, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0x55A, symBinAddr: 0x100003622, symSize: 0x20 }
-  - { offsetInCU: 0x4345, offset: 0x4345, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0x57A, symBinAddr: 0x100003642, symSize: 0x20 }
-  - { offsetInCU: 0x436C, offset: 0x436C, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiE5equalERS3_, symObjAddr: 0x538, symBinAddr: 0x100003600, symSize: 0x22 }
-  - { offsetInCU: 0x4374, offset: 0x4374, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0x55A, symBinAddr: 0x100003622, symSize: 0x20 }
-  - { offsetInCU: 0x43AE, offset: 0x43AE, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9clear_delEv, symObjAddr: 0x4DC, symBinAddr: 0x1000035A4, symSize: 0x5C }
-  - { offsetInCU: 0x43DD, offset: 0x43DD, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9push_backERKi, symObjAddr: 0x3FA, symBinAddr: 0x1000034C2, symSize: 0xE2 }
-  - { offsetInCU: 0x4446, offset: 0x4446, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE3endEv, symObjAddr: 0x3C4, symBinAddr: 0x10000348C, symSize: 0x36 }
-  - { offsetInCU: 0x4475, offset: 0x4475, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x3B2, symBinAddr: 0x10000347A, symSize: 0x12 }
-  - { offsetInCU: 0x44A4, offset: 0x44A4, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE4sizeEv, symObjAddr: 0x3A0, symBinAddr: 0x100003468, symSize: 0x12 }
-  - { offsetInCU: 0x44AC, offset: 0x44AC, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x3B2, symBinAddr: 0x10000347A, symSize: 0x12 }
-  - { offsetInCU: 0x44D3, offset: 0x44D3, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE7defoultEv, symObjAddr: 0x33E, symBinAddr: 0x100003406, symSize: 0x62 }
-  - { offsetInCU: 0x4537, offset: 0x4537, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ev, symObjAddr: 0x31A, symBinAddr: 0x1000033E2, symSize: 0x24 }
-  - { offsetInCU: 0x4549, offset: 0x4549, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x308, symBinAddr: 0x1000033D0, symSize: 0x12 }
-  - { offsetInCU: 0x4578, offset: 0x4578, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x2D4, symBinAddr: 0x10000339C, symSize: 0x34 }
-  - { offsetInCU: 0x4580, offset: 0x4580, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x308, symBinAddr: 0x1000033D0, symSize: 0x12 }
-  - { offsetInCU: 0x45C7, offset: 0x45C7, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEneES3_, symObjAddr: 0x2AC, symBinAddr: 0x100003374, symSize: 0x28 }
-  - { offsetInCU: 0x45CF, offset: 0x45CF, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x2D4, symBinAddr: 0x10000339C, symSize: 0x34 }
-  - { offsetInCU: 0x460A, offset: 0x460A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE3endEv, symObjAddr: 0x27E, symBinAddr: 0x100003346, symSize: 0x2E }
-  - { offsetInCU: 0x469E, offset: 0x469E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x268, symBinAddr: 0x100003330, symSize: 0x16 }
-  - { offsetInCU: 0x46A6, offset: 0x46A6, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE3endEv, symObjAddr: 0x27E, symBinAddr: 0x100003346, symSize: 0x2E }
-  - { offsetInCU: 0x46CC, offset: 0x46CC, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED2Ev, symObjAddr: 0x252, symBinAddr: 0x10000331A, symSize: 0x16 }
-  - { offsetInCU: 0x46D4, offset: 0x46D4, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x268, symBinAddr: 0x100003330, symSize: 0x16 }
-  - { offsetInCU: 0x46D0, offset: 0x46D0, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5beginEv, symObjAddr: 0x226, symBinAddr: 0x1000032EE, symSize: 0x2C }
-  - { offsetInCU: 0x46D8, offset: 0x46D8, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED2Ev, symObjAddr: 0x252, symBinAddr: 0x10000331A, symSize: 0x16 }
-  - { offsetInCU: 0x4713, offset: 0x4713, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE16insert_many_backIJEEEvDpOT_, symObjAddr: 0x21A, symBinAddr: 0x1000032E2, symSize: 0xC }
-  - { offsetInCU: 0x4787, offset: 0x4787, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x1FE, symBinAddr: 0x1000032C6, symSize: 0x1C }
-  - { offsetInCU: 0x480A, offset: 0x480A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiEC1ERKSt16initializer_listIiE, symObjAddr: 0x188, symBinAddr: 0x100003250, symSize: 0x76 }
-  - { offsetInCU: 0x4812, offset: 0x4812, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x1FE, symBinAddr: 0x1000032C6, symSize: 0x1C }
-  - { offsetInCU: 0x485B, offset: 0x485B, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x1000030E3, symSize: 0x16D }
-  - { offsetInCU: 0x4863, offset: 0x4863, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiEC1ERKSt16initializer_listIiE, symObjAddr: 0x188, symBinAddr: 0x100003250, symSize: 0x76 }
-  - { offsetInCU: 0x4901, offset: 0x4901, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x1000030C8, symSize: 0x1B }
-  - { offsetInCU: 0x4909, offset: 0x4909, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x1000030E3, symSize: 0x16D }
+  - { offsetInCU: 0xF9, offset: 0xF9, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x100002514, symSize: 0x1B }
+  - { offsetInCU: 0x3231, offset: 0x3231, size: 0x8, addend: 0x0, symName: __ZStL8__ioinit, symObjAddr: 0x23808, symBinAddr: 0x100008059, symSize: 0x0 }
+  - { offsetInCU: 0x419A, offset: 0x419A, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIjEE, symObjAddr: 0x109B, symBinAddr: 0x10000365C, symSize: 0x0 }
+  - { offsetInCU: 0x41B4, offset: 0x41B4, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedImEE, symObjAddr: 0x109C, symBinAddr: 0x10000365D, symSize: 0x0 }
+  - { offsetInCU: 0x41CE, offset: 0x41CE, size: 0x8, addend: 0x0, symName: __ZNSt8__detail30__integer_to_chars_is_unsignedIyEE, symObjAddr: 0x109D, symBinAddr: 0x10000365E, symSize: 0x0 }
+  - { offsetInCU: 0x41F8, offset: 0x41F8, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0x1033, symBinAddr: 0x100003547, symSize: 0xB }
+  - { offsetInCU: 0x4220, offset: 0x4220, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0xFFA, symBinAddr: 0x10000350E, symSize: 0x39 }
+  - { offsetInCU: 0x4228, offset: 0x4228, size: 0x8, addend: 0x0, symName: __GLOBAL__sub_I_s21_list.cpp, symObjAddr: 0x1033, symBinAddr: 0x100003547, symSize: 0xB }
+  - { offsetInCU: 0x4213, offset: 0x4213, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9pop_frontEv, symObjAddr: 0xF1A, symBinAddr: 0x10000342E, symSize: 0xE0 }
+  - { offsetInCU: 0x421B, offset: 0x421B, size: 0x8, addend: 0x0, symName: __Z41__static_initialization_and_destruction_0v, symObjAddr: 0xFFA, symBinAddr: 0x10000350E, symSize: 0x39 }
+  - { offsetInCU: 0x42AD, offset: 0x42AD, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ei, symObjAddr: 0xEEA, symBinAddr: 0x1000033FE, symSize: 0x30 }
+  - { offsetInCU: 0x42CB, offset: 0x42CB, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiEaSERNS1_17ListConstIteratorIiEE, symObjAddr: 0xECA, symBinAddr: 0x1000033DE, symSize: 0x20 }
+  - { offsetInCU: 0x42D3, offset: 0x42D3, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ei, symObjAddr: 0xEEA, symBinAddr: 0x1000033FE, symSize: 0x30 }
+  - { offsetInCU: 0x430D, offset: 0x430D, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEmmEv, symObjAddr: 0xEAA, symBinAddr: 0x1000033BE, symSize: 0x20 }
+  - { offsetInCU: 0x4315, offset: 0x4315, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiEaSERNS1_17ListConstIteratorIiEE, symObjAddr: 0xECA, symBinAddr: 0x1000033DE, symSize: 0x20 }
+  - { offsetInCU: 0x433C, offset: 0x433C, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE10push_frontERKi, symObjAddr: 0xDD4, symBinAddr: 0x1000032E8, symSize: 0xD6 }
+  - { offsetInCU: 0x4344, offset: 0x4344, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEmmEv, symObjAddr: 0xEAA, symBinAddr: 0x1000033BE, symSize: 0x20 }
+  - { offsetInCU: 0x43A5, offset: 0x43A5, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEeqES3_, symObjAddr: 0xDAE, symBinAddr: 0x1000032C2, symSize: 0x26 }
+  - { offsetInCU: 0x442B, offset: 0x442B, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiED1Ev, symObjAddr: 0xD8A, symBinAddr: 0x10000329E, symSize: 0x24 }
+  - { offsetInCU: 0x443D, offset: 0x443D, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5clearEv, symObjAddr: 0xD58, symBinAddr: 0x10000326C, symSize: 0x32 }
+  - { offsetInCU: 0x44D8, offset: 0x44D8, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1EiPS3_S4_, symObjAddr: 0xD20, symBinAddr: 0x100003234, symSize: 0x38 }
+  - { offsetInCU: 0x4507, offset: 0x4507, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0xD00, symBinAddr: 0x100003214, symSize: 0x20 }
+  - { offsetInCU: 0x4536, offset: 0x4536, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0xCE0, symBinAddr: 0x1000031F4, symSize: 0x20 }
+  - { offsetInCU: 0x453E, offset: 0x453E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5emptyEv, symObjAddr: 0xD00, symBinAddr: 0x100003214, symSize: 0x20 }
+  - { offsetInCU: 0x4565, offset: 0x4565, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiE5equalERS3_, symObjAddr: 0xCBE, symBinAddr: 0x1000031D2, symSize: 0x22 }
+  - { offsetInCU: 0x456D, offset: 0x456D, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEv, symObjAddr: 0xCE0, symBinAddr: 0x1000031F4, symSize: 0x20 }
+  - { offsetInCU: 0x45A7, offset: 0x45A7, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEmmEi, symObjAddr: 0xC8A, symBinAddr: 0x10000319E, symSize: 0x34 }
+  - { offsetInCU: 0x45AF, offset: 0x45AF, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiE5equalERS3_, symObjAddr: 0xCBE, symBinAddr: 0x1000031D2, symSize: 0x22 }
+  - { offsetInCU: 0x45F6, offset: 0x45F6, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE6insertENS1_12ListIteratorIiEERKi, symObjAddr: 0xA12, symBinAddr: 0x100002F26, symSize: 0x278 }
+  - { offsetInCU: 0x46ED, offset: 0x46ED, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE33check_iterator_membership_to_listENS1_17ListConstIteratorIiEE, symObjAddr: 0x94A, symBinAddr: 0x100002E5E, symSize: 0xC8 }
+  - { offsetInCU: 0x46F5, offset: 0x46F5, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE6insertENS1_12ListIteratorIiEERKi, symObjAddr: 0xA12, symBinAddr: 0x100002F26, symSize: 0x278 }
+  - { offsetInCU: 0x476E, offset: 0x476E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9clear_delEv, symObjAddr: 0x8EE, symBinAddr: 0x100002E02, symSize: 0x5C }
+  - { offsetInCU: 0x479D, offset: 0x479D, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE9push_backERKi, symObjAddr: 0x80C, symBinAddr: 0x100002D20, symSize: 0xE2 }
+  - { offsetInCU: 0x4806, offset: 0x4806, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE3endEv, symObjAddr: 0x7D6, symBinAddr: 0x100002CEA, symSize: 0x36 }
+  - { offsetInCU: 0x4835, offset: 0x4835, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x7C4, symBinAddr: 0x100002CD8, symSize: 0x12 }
+  - { offsetInCU: 0x4864, offset: 0x4864, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE4sizeEv, symObjAddr: 0x7B2, symBinAddr: 0x100002CC6, symSize: 0x12 }
+  - { offsetInCU: 0x486C, offset: 0x486C, size: 0x8, addend: 0x0, symName: __ZNKSt16initializer_listIiE5beginEv, symObjAddr: 0x7C4, symBinAddr: 0x100002CD8, symSize: 0x12 }
+  - { offsetInCU: 0x4893, offset: 0x4893, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE7defoultEv, symObjAddr: 0x750, symBinAddr: 0x100002C64, symSize: 0x62 }
+  - { offsetInCU: 0x48F7, offset: 0x48F7, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ev, symObjAddr: 0x72C, symBinAddr: 0x100002C40, symSize: 0x24 }
+  - { offsetInCU: 0x4909, offset: 0x4909, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4sizeEv, symObjAddr: 0x71A, symBinAddr: 0x100002C2E, symSize: 0x12 }
+  - { offsetInCU: 0x4911, offset: 0x4911, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE4nodeIiEC1Ev, symObjAddr: 0x72C, symBinAddr: 0x100002C40, symSize: 0x24 }
+  - { offsetInCU: 0x4938, offset: 0x4938, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x708, symBinAddr: 0x100002C1C, symSize: 0x12 }
+  - { offsetInCU: 0x4967, offset: 0x4967, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x6D4, symBinAddr: 0x100002BE8, symSize: 0x34 }
+  - { offsetInCU: 0x496F, offset: 0x496F, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEdeEv, symObjAddr: 0x708, symBinAddr: 0x100002C1C, symSize: 0x12 }
+  - { offsetInCU: 0x49B6, offset: 0x49B6, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEneES3_, symObjAddr: 0x6AC, symBinAddr: 0x100002BC0, symSize: 0x28 }
+  - { offsetInCU: 0x49BE, offset: 0x49BE, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiEppEi, symObjAddr: 0x6D4, symBinAddr: 0x100002BE8, symSize: 0x34 }
+  - { offsetInCU: 0x49F9, offset: 0x49F9, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE5beginEv, symObjAddr: 0x680, symBinAddr: 0x100002B94, symSize: 0x2C }
+  - { offsetInCU: 0x4A01, offset: 0x4A01, size: 0x8, addend: 0x0, symName: __ZNK3s214ListIiE17ListConstIteratorIiEneES3_, symObjAddr: 0x6AC, symBinAddr: 0x100002BC0, symSize: 0x28 }
+  - { offsetInCU: 0x4A46, offset: 0x4A46, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE11insert_manyIJiEEENS1_12ListIteratorIiEENS1_17ListConstIteratorIiEEDpOT_, symObjAddr: 0x47A, symBinAddr: 0x10000298E, symSize: 0x206 }
+  - { offsetInCU: 0x4BA9, offset: 0x4BA9, size: 0x8, addend: 0x0, symName: __ZSt7forwardIiEOT_RNSt16remove_referenceIS0_E4typeE, symObjAddr: 0x46C, symBinAddr: 0x100002980, symSize: 0xE }
+  - { offsetInCU: 0x4BB1, offset: 0x4BB1, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE11insert_manyIJiEEENS1_12ListIteratorIiEENS1_17ListConstIteratorIiEEDpOT_, symObjAddr: 0x47A, symBinAddr: 0x10000298E, symSize: 0x206 }
+  - { offsetInCU: 0x4C08, offset: 0x4C08, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x456, symBinAddr: 0x10000296A, symSize: 0x16 }
+  - { offsetInCU: 0x4C10, offset: 0x4C10, size: 0x8, addend: 0x0, symName: __ZSt7forwardIiEOT_RNSt16remove_referenceIS0_E4typeE, symObjAddr: 0x46C, symBinAddr: 0x100002980, symSize: 0xE }
+  - { offsetInCU: 0x4C36, offset: 0x4C36, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED2Ev, symObjAddr: 0x440, symBinAddr: 0x100002954, symSize: 0x16 }
+  - { offsetInCU: 0x4C3E, offset: 0x4C3E, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE17ListConstIteratorIiED1Ev, symObjAddr: 0x456, symBinAddr: 0x10000296A, symSize: 0x16 }
+  - { offsetInCU: 0x4C3A, offset: 0x4C3A, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE3endEv, symObjAddr: 0x412, symBinAddr: 0x100002926, symSize: 0x2E }
+  - { offsetInCU: 0x4CB8, offset: 0x4CB8, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x3F6, symBinAddr: 0x10000290A, symSize: 0x1C }
+  - { offsetInCU: 0x4D3B, offset: 0x4D3B, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiEC1ERKSt16initializer_listIiE, symObjAddr: 0x380, symBinAddr: 0x100002894, symSize: 0x76 }
+  - { offsetInCU: 0x4D43, offset: 0x4D43, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiED1Ev, symObjAddr: 0x3F6, symBinAddr: 0x10000290A, symSize: 0x1C }
+  - { offsetInCU: 0x4D8C, offset: 0x4D8C, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x10000252F, symSize: 0x365 }
+  - { offsetInCU: 0x4E82, offset: 0x4E82, size: 0x8, addend: 0x0, symName: __ZN3s214ListIiE12ListIteratorIiED1Ev, symObjAddr: 0x0, symBinAddr: 0x100002514, symSize: 0x1B }
+  - { offsetInCU: 0x4E8A, offset: 0x4E8A, size: 0x8, addend: 0x0, symName: _main, symObjAddr: 0x1B, symBinAddr: 0x10000252F, symSize: 0x365 }
 ...
